@@ -18,22 +18,21 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static tech.pegasys.teku.infrastructure.http.HttpStatusCodes.SC_BAD_REQUEST;
 import static tech.pegasys.teku.infrastructure.http.HttpStatusCodes.SC_OK;
+import static tech.pegasys.teku.infrastructure.json.types.SerializableTypeDefinition.listOf;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import okhttp3.Response;
 import org.junit.jupiter.api.Test;
-import tech.pegasys.teku.api.response.v1.beacon.PostDataFailureResponse;
-import tech.pegasys.teku.api.schema.BLSSignature;
-import tech.pegasys.teku.api.schema.altair.SyncCommitteeMessage;
 import tech.pegasys.teku.beaconrestapi.AbstractDataBackedRestAPIIntegrationTest;
 import tech.pegasys.teku.beaconrestapi.handlers.v1.beacon.PostSyncCommittees;
 import tech.pegasys.teku.infrastructure.async.SafeFuture;
+import tech.pegasys.teku.infrastructure.json.JsonUtil;
 import tech.pegasys.teku.infrastructure.unsigned.UInt64;
 import tech.pegasys.teku.spec.SpecMilestone;
 import tech.pegasys.teku.spec.TestSpecFactory;
+import tech.pegasys.teku.spec.datastructures.operations.versions.altair.SyncCommitteeMessage;
 import tech.pegasys.teku.spec.util.DataStructureUtil;
 import tech.pegasys.teku.validator.api.SubmitDataError;
 
@@ -43,46 +42,38 @@ public class PostSyncCommitteesIntegrationTest extends AbstractDataBackedRestAPI
   @Test
   void shouldSubmitSyncCommitteesAndGetResponse() throws IOException {
     spec = TestSpecFactory.createMinimalAltair();
-    DataStructureUtil dataStructureUtil = new DataStructureUtil(spec);
+    final DataStructureUtil dataStructureUtil = new DataStructureUtil(spec);
     startRestAPIAtGenesis(SpecMilestone.ALTAIR);
-    final List<SyncCommitteeMessage> requestBody =
-        List.of(
-            new SyncCommitteeMessage(
-                UInt64.ONE,
-                dataStructureUtil.randomBytes32(),
-                dataStructureUtil.randomUInt64(),
-                new BLSSignature(dataStructureUtil.randomSignature())));
+    final SyncCommitteeMessage message = dataStructureUtil.randomSyncCommitteeMessage();
     final SafeFuture<List<SubmitDataError>> future =
         SafeFuture.completedFuture(List.of(new SubmitDataError(UInt64.ZERO, ERROR_MESSAGE)));
-    when(validatorApiChannel.sendSyncCommitteeMessages(
-            requestBody.get(0).asInternalCommitteeSignature(spec).stream()
-                .collect(Collectors.toList())))
-        .thenReturn(future);
-    Response response = post(PostSyncCommittees.ROUTE, jsonProvider.objectToJSON(requestBody));
+    when(validatorApiChannel.sendSyncCommitteeMessages(any())).thenReturn(future);
+    final Response response =
+        post(
+            PostSyncCommittees.ROUTE,
+            JsonUtil.serialize(
+                List.of(dataStructureUtil.randomSyncCommitteeMessage()),
+                listOf(message.getSchema().getJsonTypeDefinition())));
 
     assertThat(response.code()).isEqualTo(SC_BAD_REQUEST);
-    final PostDataFailureResponse responseBody =
-        jsonProvider.jsonToObject(response.body().string(), PostDataFailureResponse.class);
-
-    assertThat(responseBody.failures.get(0).message).isEqualTo(ERROR_MESSAGE);
+    final JsonNode body = OBJECT_MAPPER.readTree(response.body().string());
+    assertThat(body.get("failures").get(0).get("message").asText()).isEqualTo(ERROR_MESSAGE);
   }
 
   @Test
   void shouldGet200OkWhenThereAreNoErrors() throws Exception {
     spec = TestSpecFactory.createMinimalAltair();
-    DataStructureUtil dataStructureUtil = new DataStructureUtil(spec);
+    final DataStructureUtil dataStructureUtil = new DataStructureUtil(spec);
     startRestAPIAtGenesis(SpecMilestone.ALTAIR);
-    final List<SyncCommitteeMessage> requestBody =
-        List.of(
-            new SyncCommitteeMessage(
-                UInt64.ONE,
-                dataStructureUtil.randomBytes32(),
-                dataStructureUtil.randomUInt64(),
-                new BLSSignature(dataStructureUtil.randomSignature())));
-    final SafeFuture<List<SubmitDataError>> future =
-        SafeFuture.completedFuture(Collections.emptyList());
+    final SyncCommitteeMessage message = dataStructureUtil.randomSyncCommitteeMessage();
+    final SafeFuture<List<SubmitDataError>> future = SafeFuture.completedFuture(List.of());
     when(validatorApiChannel.sendSyncCommitteeMessages(any())).thenReturn(future);
-    Response response = post(PostSyncCommittees.ROUTE, jsonProvider.objectToJSON(requestBody));
+    final Response response =
+        post(
+            PostSyncCommittees.ROUTE,
+            JsonUtil.serialize(
+                List.of(dataStructureUtil.randomSyncCommitteeMessage()),
+                listOf(message.getSchema().getJsonTypeDefinition())));
 
     assertThat(response.code()).isEqualTo(SC_OK);
     assertThat(response.body().string()).isEmpty();
@@ -92,15 +83,13 @@ public class PostSyncCommitteesIntegrationTest extends AbstractDataBackedRestAPI
   void phase0SlotCausesBadRequest() throws IOException {
     startRestAPIAtGenesis(SpecMilestone.PHASE0);
     spec = TestSpecFactory.createMinimalPhase0();
-    DataStructureUtil dataStructureUtil = new DataStructureUtil(spec);
-    final List<SyncCommitteeMessage> requestBody =
-        List.of(
-            new SyncCommitteeMessage(
-                UInt64.ONE,
-                dataStructureUtil.randomBytes32(),
-                dataStructureUtil.randomUInt64(),
-                new BLSSignature(dataStructureUtil.randomSignature())));
-    Response response = post(PostSyncCommittees.ROUTE, jsonProvider.objectToJSON(requestBody));
+    final DataStructureUtil dataStructureUtil = new DataStructureUtil(spec);
+    final Response response =
+        post(
+            PostSyncCommittees.ROUTE,
+            String.format(
+                "[{\"slot\":\"1\",\"beacon_block_root\":\"%s\",\"validator_index\":\"1\",\"signature\":\"%s\"}]",
+                dataStructureUtil.randomBytes32(), dataStructureUtil.randomSignature()));
     assertThat(response.code()).isEqualTo(SC_BAD_REQUEST);
     assertThat(response.body().string())
         .contains("Could not create sync committee signature at phase0 slot 1");
